@47analogy 500px fixed footer center aligned, pending menu lines

--- a/css/index.css
+++ b/css/index.css
@@ -412,6 +412,7 @@ hr{
     }
     
     .contact *{
+        margin-left: 0px;
         margin-top: 10px;
     }
     
